refactor(2025-01-13-slide): migrate to custom class and simplify
- Replace beamer with custom class for slide creation
- Remove unnecessary packages and configurations
- Update font settings for both Chinese and English
- Simplify slide structure and remove unused elements

--- a/2025/01/2025-01-13-slide.tex
+++ b/2025/01/2025-01-13-slide.tex
@@ -1,33 +1,4 @@
-\documentclass{beamer}
-\usepackage{ctex}
-\usepackage[utf8]{inputenc}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{booktabs}
-\usepackage{hyperref}
-\usepackage{subcaption}
-\usepackage{multicol}
-\usepackage{listings}
-\usepackage{multirow}
-\usepackage{tabularx}
-\usepackage{tikz}
-
-\bibliographystyle{alpha}
-
-\usetheme{Madrid}
-\usecolortheme{seahorse}
-\setbeamertemplate{caption}[numbered]
-% 自定义块颜色
-\setbeamercolor{block title}{bg=blue!30,fg=black}
-\setbeamercolor{block body}{bg=blue!10,fg=black}
-\setbeamercolor{alertblock title}{bg=red!50,fg=black}
-\setbeamercolor{alertblock body}{bg=red!20,fg=black}
-
-\title{\textbf{周报}}
-\author{向嘉豪}
-\institute{衡阳师范学院}
-\date{\today}
+\documentclass[slide]{../../custom}
 
 \begin{document}
 
@@ -146,8 +117,5 @@
     \end{itemize}
   \end{block}
 \end{frame}
-
-% 删除: \bibliographystyle{alpha}
-% 删除: \bibliography{../../paper}
 
 \end{document}
