--- a/custom.cls
+++ b/custom.cls
@@ -1,37 +1,42 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesClass{custom}[2023/10/01 v1.0 Custom LaTeX Class]
-% Load a base class to define standard font sizes
 
 % Define options for report and slide
 \newif\if@isreport
 \newif\if@isslide
-\DeclareOption{report}{\@isreporttrue}
-\DeclareOption{slide}{\@isslidetrue}
-\ExecuteOptions{report}
+\DeclareOption{report}{\@isreporttrue\@isslidefalse}
+\DeclareOption{slide}{\@isslidetrue\@isreportfalse}
+% \ExecuteOptions{report}
 \ProcessOptions\relax
 
-\if@isreport
+% Common packages for both report and slide
 
-%%%%%%%%%% report package %%%%%%%%%%
-\LoadClass{article} % Added to define standard font sizes
-% Load common packages
+\if@isreport
+\LoadClass{article}
+% Report-specific packages
+
 \RequirePackage{graphicx}
 \RequirePackage{hyperref}
-\RequirePackage{geometry}
-\RequirePackage{ctex} % Added for Chinese text support
-\RequirePackage{fancyhdr} % Added for header and footer customization
-\RequirePackage{enumitem} % Added for customizable list environments
-\RequirePackage{amsmath} % Added for math equation support
-\RequirePackage{amssymb} % Added for mathematical symbols
-\RequirePackage{titling} % Added for \droptitle support
-% Load additional packages from 2025-01-13.tex
+\RequirePackage{amsmath}
+\RequirePackage{amssymb}
+\RequirePackage{booktabs}
 \RequirePackage{subcaption}
 \RequirePackage{multicol}
 \RequirePackage{listings}
-\RequirePackage{booktabs}
 \RequirePackage{multirow}
 \RequirePackage{tikz}
-\RequirePackage{titlesec} % Added: Load titlesec package for \titleformat
+
+\RequirePackage{geometry}
+\RequirePackage{fancyhdr}
+\RequirePackage{enumitem}
+\RequirePackage{titling}
+\RequirePackage{titlesec}
+
+\RequirePackage{ctex}
+% Choose Chinese fonts
+\setCJKmainfont{Songti SC} % Main Chinese font (Songti)
+\setCJKsansfont{Lantinghei TC} % Sans-serif Chinese font (Heiti)
+\setCJKmonofont{Maple Mono NF CN} % Monospaced Chinese font (Fangsong)
 
 %% Customize the title format
 \titleformat{\section}
@@ -49,18 +54,51 @@
   \end{center}
 }
 
-% Choose Chinese fonts
-\setCJKmainfont{Songti SC} % Main Chinese font (Songti)
-\setCJKsansfont{Lantinghei TC} % Sans-serif Chinese font (Heiti)
-\setCJKmonofont{Maple Mono NF CN} % Monospaced Chinese font (Fangsong)
-
 \fi
 
 \if@isslide
-% Settings specific to slide
-\RequirePackage{beamer}
-\mode<presentation>
+\LoadClass{beamer}
+% Slide-specific packages
+\RequirePackage{inputenc}
+\RequirePackage{tabularx}
+\RequirePackage{graphicx}
+\RequirePackage{amsmath}
+\RequirePackage{amssymb}
+\RequirePackage{booktabs}
+\RequirePackage{hyperref}
+\RequirePackage{subcaption}
+\RequirePackage{multicol}
+\RequirePackage{listings}
+\RequirePackage{multirow}
+\RequirePackage{tikz}
+
+%% font settings
+\RequirePackage{ctex}
+
+% Font configuration for Chinese
+\setCJKmainfont{Maple Mono NF CN}
+\setCJKsansfont{Maple Mono NF CN}
+\setCJKmonofont{Maple Mono NF CN}
+
+% the english font setting
+\setmainfont{Maple Mono NF CN}
+\setsansfont{Maple Mono NF CN}
+\setmonofont{Maple Mono NF CN}
+
+% Beamer settings
 \usetheme{Madrid}
+\usecolortheme{seahorse}
+\setbeamertemplate{caption}[numbered]
+
+% Custom block colors
+\setbeamercolor{block title}{bg=blue!30,fg=black}
+\setbeamercolor{block body}{bg=blue!10,fg=black}
+\setbeamercolor{alertblock title}{bg=red!50,fg=black}
+\setbeamercolor{alertblock body}{bg=red!20,fg=black}
+
+% Default title settings
+\title{\textbf{周报}}
+\date{\today}
 \fi
 
 \endinput
