--- a/paper.bib
+++ b/paper.bib
@@ -158,6 +158,27 @@
   publisher = {Institute of Electrical and Electronics Engineers (IEEE)}
 }
 
+@article{Kim2024,
+  author    = {DongCheon Kim and Hojin Choi and Seog Chung Seo},
+  journal   = {{IEEE} Trans. Circuits Syst. {I} Regul. Pap.},
+  title     = {Parallel Implementation of {SPHINCS+} With GPUs},
+  year      = {2024},
+  number    = {6},
+  pages     = {2810--2823},
+  volume    = {71},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/journals/tcasI/KimCS24.bib},
+  doi       = {10.1109/TCSI.2024.3370802}
+}
+
+@misc{Ning2024,
+  author       = {Yijing Ning and Jiankuo Dong and Jingqiang Lin and Fangyu Zheng and Yu Fu and Zhenjiang Dong and Fu Xiao},
+  title        = {{GRASP}: Accelerating Hash-based {PQC} Performance on {GPU} Parallel Architecture},
+  howpublished = {Cryptology {ePrint} Archive, Paper 2024/1030},
+  year         = {2024},
+  url          = {https://eprint.iacr.org/2024/1030}
+}
+
 @misc{Turan,
   author    = {Meltem Sonmez Turan and Kerry McKay and Donghoon Chang and Lawrence E. Bassham and Jinkeon Kang and Noah D. Waller and John M. Kelsey and Deukjo Hong},
   title     = {Status report on the final round of the NIST lightweight cryptography standardization process},
