feat(slides): update presentation slides for February 17, 2025, with enhanced performance discussion

--- a/2025/02/2025-02-17-slide.tex
+++ b/2025/02/2025-02-17-slide.tex
@@ -35,7 +35,7 @@
 
 \begin{frame}
   \frametitle{创新点讨论}
-  上述研究主要关注两个核心性能指标：\textcolor{blue}{吞吐量}和\textcolor{blue}{延迟}。其中，吞吐量衡量在固定核心数条件下GPU处理签名任务的能力，其效果主要受并行效率（PE）的影响；而延迟则反映了签名任务的并行执行程度。为提升吞吐量，相较于采用静态并行数设置，我们计划根据各组件的运行时长\textcolor{blue}{动态调整并行数}，从而进一步提高PE。此外，代码阅读过程中发现目前底层的HASH函数采用CPU串行实现，这在一定程度上制约了并行效率。因此，计划将其替换为GPU\textcolor{blue}{并行HASH函数}，以期降低延迟并进一步提升系统性能。
+  上述研究主要关注两个核心性能指标：\textcolor{blue}{吞吐量}和\textcolor{blue}{延迟}。其中，吞吐量衡量在固定核心数条件下GPU处理签名任务的能力，其效果主要受并行效率（PE）的影响；而延迟则反映了签名任务的并行执行程度。为提升吞吐量，相较于采用静态并行数设置，我们计划根据各组件的运行时长\textcolor{blue}{动态调整并行数}，从而进一步提高PE。此外，代码阅读过程中发现目前底层的HASH函数采用串行实现，这在一定程度上制约了并行效率。因此，计划将其替换为GPU\textcolor{blue}{并行HASH函数}，以期降低延迟并进一步提升系统性能。
   \vfill
   \begin{columns}
     \column{0.5\textwidth}
