fix(slide): correct wording in key findings for dynamic scheduling

--- a/2025/03/2025-03-10-slide.tex
+++ b/2025/03/2025-03-10-slide.tex
@@ -69,7 +69,7 @@
   \textbf{关键发现:}
   \begin{itemize}
     \item 二级并行中动态调度提升有限 (8.16x → 8.21x)
-    \item 三级并行中动态调度效果显著 (142.65x → 159.30x)
+    \item 二三级并行中动态调度效果显著 (142.65x → 159.30x)
     \item 执行时间优化：0.220ms → 0.197ms (\textcolor{red}{10.9\%}提升)
   \end{itemize}
 \end{frame}
