chore: update subproject commit reference and fix typo in June 16 report

--- a/2025/06/2025-06-16.tex
+++ b/2025/06/2025-06-16.tex
@@ -33,7 +33,7 @@
 Miškovský和Kubátová~\cite{IEEE-TVLSI:MisKub21}在IEEE TVLSI上提出了面积高效的掩码与故障容错架构，通过减少冗余度实现了安全性与硬件开销的平衡。Belenky等人~\cite{TCHES:BelBugAzr22}提出了RAMBAM方案，将乘法掩码与冗余机制结合，增强了AES实现的故障抗性。
 Ramezanpour等人~\cite{IEEE-TCAD:RamAmp20}提出了RS-MASK方案，作为针对功耗分析和故障分析的集成对策，\red{使用随机空间掩码技术同时抵御两类攻击}。
 
-\textbf{后量子密码学的故障攻击防护}。Howe等人~\cite{IEEE-HOST:HowKhaMarNor19}在IEEE HOST上提出了针对格基密码学中误差采样器的故障攻击对策。这项工作专门解决了后量子密码构造中的独特漏洞，\blue{为后量子时代的安全芯片设计提供了重要的理论基础}。
+\textbf{后量子密码学的故障攻击防护}。Howe等人~\cite{IEEE-HOST:HowKhaMarNor19}在IEEE TC 上提出了针对格基密码学中误差采样器的故障攻击对策。这项工作专门解决了后量子密码构造中的独特漏洞，\blue{为后量子时代的安全芯片设计提供了重要的理论基础}。
 
 
 \subsection{当前技术挑战与研究缺口}
