fix: update slide content for June 16 presentation to correct terminology

--- a/2025/06/2025-06-16-slide.tex
+++ b/2025/06/2025-06-16-slide.tex
@@ -21,7 +21,7 @@
 \end{frame}
 
 \section{相关工作技术调研}
-\begin{frame}{侧信道与故障攻击的联合防护}
+\begin{frame}{功耗与故障攻击的联合防护}
   \begin{block}{联合攻击防护的关键问题}
     Saha等人~\cite{COSADE:SahBagJapMuk21}在COSADE 2021上发表的"Divided We Stand, United We Fall"深入分析了SCA+SIFA反措施的安全性问题，\red{揭示了单独设计的防护措施在联合攻击下可能失效的关键问题}。
   \end{block}
@@ -68,7 +68,7 @@
 
 \begin{frame}{多重攻击向量的统一建模挑战}
   \begin{block}{联合攻击的威胁}
-    现有研究往往独立考虑侧信道攻击和故障攻击的防护，对于两类攻击联合实施时的安全性分析相对薄弱。Saha等人~\cite{COSADE:SahBagJapMuk21}的工作深刻揭示了这一问题：\red{许多单独设计的SCA+SIFA防护措施在面对联合攻击时会失效}。
+    现有研究往往独立考虑功耗攻击和故障攻击的防护，对于两类攻击联合实施时的安全性分析相对薄弱。Saha等人~\cite{COSADE:SahBagJapMuk21}的工作深刻揭示了这一问题：\red{许多单独设计的SCA+SIFA防护措施在面对联合攻击时会失效}。
   \end{block}
 \end{frame}
 
